[package]
name = "rust_survivors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_ecs_tilemap = "0.11.1"
bevy_rapier2d = "0.23.0"
rand = "0.8.4"

#enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

#enable high optimizations for dependencies (incl Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
